--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -22,7 +22,7 @@ jobs:
         run: go build -v ./...
 
       - name: Test & Coverage
-        run: go test -v ./... -race -coverprofile=coverage.out -covermode=atomic
+        run: go test -v ./... -race -tags=unit -coverprofile=coverage.out -covermode=atomic
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
